--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     
     <div class="main-container">
 <div class="searchBox">
+  <form action="">
     <input type="text" id="city" placeholder="Enter Country / City">
-    <button class="fa-solid fa-magnifying-glass" onclick="getWeather()"></button>
+    <button class="fa-solid fa-magnifying-glass" onclick="getWeather()" type="submit"></button>
+  </form>
 </div>
 
     <div class="content" >
